--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "devDependencies": {
     "autoprefixer": "^7.2.6",
     "concat": "^1.0.3",
+    "live-server": "^1.2.1",
     "node-sass": "^4.9.2",
     "npm-run-all": "^4.1.3",
     "postcss-cli": "^4.1.1"
-  }
+  },
+  "dependencies": {}
 }
